--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,7 @@
     <thead>
       <th>Course Name</th>
       <th>Course Hours</th>
-      <% if current_user.admin == 1 %>
+      <% if current_user.is_admin? %>
       <th>Actions</th>
       <% else %>
       <th>Action</th>
@@ -19,7 +19,7 @@
       <tr>
         <td><%= link_to "#{c.name}", course_path(c) %></td>
         <td><%= c.hours %></td>
-        <% if current_user.admin == 1 %>
+        <% if current_user.is_admin? %>
         <td>
           <%= link_to 'Edit', edit_course_path(c) %>
           <%= link_to 'Terminate',  course_terminate_path(c), method: :delete, data: { confirm: 'Are you sure?', remote: true }, class: 'terminate' %>
