--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,16 @@
-<ul>
-  <li><%= link_to "Home", root_path %></li>
-  <% if logged_in? %>
-    <li><%= link_to "#{current_user.email}", instructor_path(current_user) %></li>
-    <li><%= link_to 'All Instructors', instructors_path %></li>
-    <li><%= link_to 'All Courses', courses_path %></li>
-    <li><%= link_to 'Log out', logout_path, method: :delete %></li>
-  <% else %>
-    <li><%= link_to 'Register', register_path %></li>
-    <li><%= link_to 'Log In', login_path %></li>
-  <% end %>
-</ul>
+<div id='navi'>
+  <%= image_tag('logo.png', size: '200x200', id: 'logo') %>
+  <ul id='nav'>
+    <li><%= link_to "Home", root_path %></li>
+    <% if logged_in? %>
+      <li><%= link_to "#{current_user.email}", instructor_path(current_user) %></li>
+      <li><%= link_to 'All Instructors', instructors_path %></li>
+      <li><%= link_to 'All Courses', courses_path %></li>
+      <li><%= link_to 'All Students', students_path %></li>
+      <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+    <% else %>
+      <li><%= link_to 'Register', register_path %></li>
+      <li><%= link_to 'Log In', login_path %></li>
+    <% end %>
+  </ul>
+</div>
